--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -1,123 +1,66 @@
-/* Global Style */
-* {
+
+.titles{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Segoe 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-/* Background */
-body {
-    background-color: #E4EBF2;
-    height: 100vh;
+.subtitle{
+    font-family: "Inter", system-ui;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #BFCAD7;
+}
+
+.main{
+    flex-direction: column;
+}
+
+.section-1{
+    width: 100%;
+    height: 60%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
-/* Principal container */
-.container {
-    position: relative;
+.main-img{
+    width: 37rem;
+    height: 28rem;
+}
+
+.section-2{
     width: 100%;
-    height: 100%;
+    height: 40%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-}
-
-/* Icons */
-
-.icon-left {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-}
-
-.icon-left img {
-    width: 80px;  
-    height: 80px; 
-}
-
-
-.icon-right {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.icon-right img {
-    width: 60px;
-}
-
-/* Login box */
-.login-box {
-    background-color: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    text-align: center;
-}
-
-/* Tittle Login */
-.login-box h2 {
-    margin-bottom: 20px;
-    color: #024873;
-}
-
-/* Style for input fields */
-.input-group {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #ccc;
-    padding: 5px;
-}
-
-.input-group input {
-    border: none;
-    outline: none;
-    flex: 1;
-    padding: 10px;
-    font-size: 16px;
-}
-
-/* icons in the fields */
-.icon {
-    padding: 0 10px;
-}
-
-.icon img {
-    width: 20px;
-}
-
-/* Button of login */
-.login-btn {
-    width: 100%;
-    padding: 10px;
     background-color: #024873;
-    border: none;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
+    padding: auto;
 }
 
-.login-btn:hover {
-    background-color: #152F40;
+.rectangle{
+    background-color: #ffffff;
+    color: #000000;
+    padding: 1rem 1rem;
+    height: 13rem;
 }
 
-/* forgot password */
-.forgot-password {
-    margin-top: 10px;
-    text-align: right;
+#about-us{
+    width: 40%;
 }
 
-.forgot-password a {
-    color: #024873;
-    text-decoration: none;
+#mission{
+    width: 20%;
 }
 
-.forgot-password a:hover {
-    text-decoration: underline;
+#vision{
+    width: 20%;
 }
+
+
