--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -1,6 +1,4 @@
 
-
-
 body{
     margin: 0;
     padding: 0;
@@ -51,7 +49,7 @@ body{
     background-color: #ffffff;
 }
 
-.icon_person{
+.icon-person{
     width: 5rem;
     height: 5rem;
 }
@@ -95,7 +93,6 @@ body{
     justify-content: center;
     align-items: center;
     font-family: "Inter", sans-serif;
-    color: #ffffff;
 }
 
 .feature {
@@ -140,7 +137,7 @@ body{
     border-radius: 30px;
     display: none;
     grid-template-rows: .2fr 1fr;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     z-index: 1;
 }
@@ -148,6 +145,37 @@ body{
 .chart h3{
     font-size: 3rem;
     color: #003366;
+}
+
+.second-header{
+    color: #ffffff;
+}
+
+
+/*inside charts*/
+
+.crud{
+    gap: 30px;
+}
+
+.crud a{
+    color: #003366;
+    padding: 3px 20px 3px 20px;
+    border-radius: 5px;
+}
+
+.crud-active{
+    border-top: 2px solid #003366;
+    border-right: 2px solid #003366;
+    border-left: 2px solid #003366;
+}
+
+.chart1{
+    display: none;
+}
+
+.sections{
+    border-top: 2px solid #003366;
 }
 
 .active{
@@ -167,6 +195,14 @@ body{
 
 .footer a {
     color: black;
+}
+
+.about{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .social{
