--- a/Frontend/src/views/home/home.html
+++ b/Frontend/src/views/home/home.html
@@ -5,85 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/Logo.png">
     <link rel="stylesheet" href="../../styles/main.css">
-    <title>Student</title>
+    <link rel="stylesheet" href="../../styles/home.css">
+    <title>Home | World University</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
-
 <body class="grid-container">
-
     <header class="header">
-        <a href="../views/home/home.html">
+        <a href="../../views/home/home.html">
             <img src="../../img/Logo.png" alt="" class="logo">
         </a>
         <div class="flex-container">
-            <button class="button">Student</button>
-            <img src="../../img/icon_person.png" alt="" class="icon_person">
+            <button class="button">User</button>
+            <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
 
     <aside class="aside">
-        <p class="title">World University</p>
+        <div class="titles">
+            <p class="title">World University</p>
+            <p class="subtitle">for the world</p>
+        </div>
+
+        <img src="../../img/students-grey.png" alt="" class="img-aside">
     </aside>
 
     <nav class="nav">
         <section class="list">
             <p><b>
-                <a href="#chart-1" class="feature">About us</a>
+                <a href="../home/home.html" class="feature">Home</a>
                 |
-                <a href="#chart-2" class="feature">Mission</a>
+                <a href="#about-us" class="feature">About Us</a>
                 |
-                <a href="#chart-3" class="feature">Vision</a>
+                <a href="#mission" class="feature">Mission</a>
+                |
+                <a href="#vision" class="feature">Vision</a>
             </b></p>
         </section>
     </nav>
 
     <main class="main">
-        <section class="first-chart" id="chart-0">
-            <i class='bx bxs-hand-up'></i>
-            <h3>What do you want to do?</h3>
+        <section class="section-1">
+            <img src="../../img/students1.png" alt="" class="main-img">
         </section>
-        <section class="chart" id="chart-1">
-            <h3>About us</h3>
-            <div class="div-chart">
-              <p>Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields</p>
+
+        <section class="section-2">
+            <div class="rectangle" id="about-us">
+                <h4>About Us</h4>
+                <p>
+                    Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields. Our vibrant community fosters intellectual curiosity, creativity, and critical thinking, preparing our graduates for success in an ever-changing world.
+                </p>
+            </div>
+            <div class="rectangle" id="mission">
+                <h4>Mission</h4>
+                <p>
+                    To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment.
+                </p>
+            </div>
+            <div class="rectangle" id="vision">
+                <h4>Vision</h4>
+                <p>
+                    To be a leading institution known for excellence in education and a positive impact on society.
+                </p>
             </div>
         </section>
-        <section class="chart" id="chart-2">
-            <h3>Mission</h3>
-            <div class="div-chart">
-              <p>To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment</p>
-            </div>
-        </section>
-        <section class="chart" id="chart-3">
-            <h3>Vision</h3>
-            <div class="div-chart">
-              <p>To be a leading institution known for excellence in education and a positive impact on society</p>
-            </div>
     </main>
 
     <footer class="footer">
-        <div>
+        <div id="contact">
             <h3>Contact Us</h3>
             <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
             <p>(604) 444 76 54</p>
             <p>Whatsapp: (57) 3008848512</p>
         </div>
-        <div>
+        <div class="about">
             <h3>About Us</h3>
-            <a href="../views/home/home.html">Home</a>
-            <p>Mission</p>
-            <p>Vision</p>
+            <a href="../../views/home/home.html">Home</a>
+            <a href="#mission">Mission</a>
+            <a href="#vision">Vision</a>
         </div>
         <div class="social">
             <h3>Our Social Networks</h3>
             <div class="icons">
-                <i class='bx bxl-facebook'></i>
-                <i class='bx bxl-youtube' ></i>
-                <i class='bx bxl-instagram-alt' ></i>
+                <a href="https://www.facebook.com/">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                <a href="https://www.youtube.com/">
+                    <i class='bx bxl-youtube' ></i>
+                </a>
+                <a href="https://www.instagram.com/">
+                    <i class='bx bxl-instagram-alt' ></i>
+                </a>
             </div>
         </div>
     </footer>
-
-    <script src="../../js/main.js"></script>
 </body>
 </html>
+
+
