--- a/Frontend/src/views/main.html
+++ b/Frontend/src/views/main.html
@@ -15,7 +15,7 @@
         </a>
         <div class="flex-container">
             <button class="button">User</button>
-            <img src="../img/icon_person.png" alt="" class="icon_person">
+            <img src="../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
 
@@ -78,18 +78,24 @@
             <p>(604) 444 76 54</p>
             <p>Whatsapp: (57) 3008848512</p>
         </div>
-        <div>
+        <div class="about">
             <h3>About Us</h3>
             <a href="../views/home/home.html">Home</a>
-            <p>Mission</p>
-            <p>Vision</p>
+            <a href="../views/home/home.html#mission">Mission</a>
+            <a href="../views/home/home.html#vision">Vision</a>
         </div>
         <div class="social">
             <h3>Our Social Networks</h3>
             <div class="icons">
-                <i class='bx bxl-facebook'></i>
-                <i class='bx bxl-youtube' ></i>
-                <i class='bx bxl-instagram-alt' ></i>
+                <a href="https://www.facebook.com/">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                <a href="https://www.youtube.com/">
+                    <i class='bx bxl-youtube' ></i>
+                </a>
+                <a href="https://www.instagram.com/">
+                    <i class='bx bxl-instagram-alt' ></i>
+                </a>
             </div>
         </div>
     </footer>
@@ -97,3 +103,5 @@
     <script src="../js/main.js"></script>
 </body>
 </html>
+
+
