--- a/Frontend/src/views/staff/staff.html
+++ b/Frontend/src/views/staff/staff.html
@@ -4,59 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/Logo.png">
-    <link rel="stylesheet" href="../../styles/staff.css">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/staff.css">
+    <title>Staff Dashboard</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Staff Home</title>
 </head>
 <body class="grid-container">
     <header class="header">
-        <img src="../../img/Logo.png" alt="" class="logo">
+        <a href="../../views/home/home.html">
+            <img src="../../img/Logo.png" alt="" class="logo">
+        </a>
         <div class="flex-container">
             <button class="button">Staff</button>
-            <img src="../../img/icon_person.png" alt="" class="icon_person">
+            <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
+
     <aside class="aside">
-        <p>Welcome Staff</p>
+        <p class="title">Welcome Staff</p>
         <img src="../../img/director.png" alt="" class="img-aside">
     </aside>
+
+    <nav class="nav">
+        <section class="list second-header">
+            <p><b>
+                <a href="#chart-0" class="feature">Start</a>
+                |
+                <a href="#chart-1" class="feature">Enrollment Management</a>
+                |
+                <a href="#chart-2" class="feature">Gestion Cursos</a>
+                |
+                <a href="#chart-3" class="feature">Profesores</a>
+                |
+                <a href="#chart-4" class="feature">Estudiantes</a> 
+            </b></p>
+        </section>
+    </nav>
+
     <main class="main">
-        <div class="flex-container1">
-            <div class="flex-container2">
-                <div class="flex-container3">
-                    <p class="title effect">Reports</p>
-                    <img src="../../img/report.png" alt="" class="img1">
+        <section class="first-chart" id="chart-0">
+            <i class='bx bxs-hand-up'></i>
+            <h3>What do you want to do?</h3>
+        </section>
+        <section class="chart" id="chart-1">
+            <h3>Enrollment Management</h3>
+            <div class="div-chart base">
+                <div class="list crud">
+                    <a href="#create" class="crud-link">Create</a>
+                    <a href="#read" class="crud-link">Read</a>
+                    <a href="#update" class="crud-link">Update</a>
+                    <a href="#delete" class="crud-link">Delete</a>
                 </div>
-                <div class="flex-container3">
-                    <p class="title effect">Manage</p>
-                    <img src="../../img/teacher.png" alt="" class="img2">
+                <div class="sections">
+                    <section class="chart1" id="create">
+                        
+                    </section>
+                    <section class="chart1" id="read">
+                        <h1>2</h1>
+                    </section>
+                    <section class="chart1" id="update">
+                        <h1>3</h1>
+                    </section>
+                    <section class="chart1" id="delete">
+                        <h1>4</h1>
+                    </section>
                 </div>
             </div>
-            <img src="../../img/people.png" alt="" class="people">
-        </div>
+        </section>
+        <section class="chart" id="chart-2">
+            <h3>Feature2</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-3">
+            <h3>Feature3</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-4">
+            <h3>Feature4</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
     </main>
+
     <footer class="footer">
         <div>
             <h3>Contact Us</h3>
-            <p>Site</p>
-            <p>Number 1</p>
-            <p>Number 2</p>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
         </div>
-        <div>
+        <div class="about">
             <h3>About Us</h3>
-            <a href="../pages/home.html">Home</a>
-            <p>Mission</p>
-            <p>Vision</p>
+            <a href="../../views/home/home.html">Home</a>
+            <a href="../../views/home/home.html#mission">Mission</a>
+            <a href="../../views/home/home.html#vision">Vision</a>
         </div>
         <div class="social">
             <h3>Our Social Networks</h3>
             <div class="icons">
-                <i class='bx bxl-facebook'></i>
-                <i class='bx bxl-youtube' ></i>
-                <i class='bx bxl-instagram-alt' ></i>
+                <a href="https://www.facebook.com/">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                <a href="https://www.youtube.com/">
+                    <i class='bx bxl-youtube' ></i>
+                </a>
+                <a href="https://www.instagram.com/">
+                    <i class='bx bxl-instagram-alt' ></i>
+                </a>
             </div>
         </div>
     </footer>
+
+    <script src="../../js/main.js"></script>
+    <script src="../../js/staff.js"></script>
 </body>
 </html>
+
+
